--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
 </head>
 <body>
     <h1>Flatdango</h1>
+    <section>
+        <div id="movie-menu">
+          <h2>Movies</h2>
+          <ul id="films">
+            <li class="filmItem">PlaceHolder li</li>
+          </ul>
+        </div>
+        <div id="movie-display">
+          <h3 id="movie-title" class="movieTitle">Movie Title</h3>
+          <img
+            id="movie-poster"
+            src=""
+            alt="Movie Poster"
+          />
+          <div id="showtime" class="showTime">showtime</div>
+          <div id="runtime" class="runTime">runtime</div>
+        </div>
+      </section>
+  
 </body>
 </html>
 
