--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
           <div id="runtime" class="runTime">runtime</div>
         </div>
       </section>
+
+      <section>
+        <div id="ticket-counter"></div>
+        <div>Tickets remaining</div>
+        <button id="buy-ticket">Buy Tickets</button>
+      </section>
+      <script type="text/javascript" src="./index.js"></script>
+      
   
 </body>
 </html>
