--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="movie-tickets">
         <div id="ticket-counter"></div>
         <div>Tickets remaining</div>
         <button id="buy-ticket">Buy Tickets</button>
